--- a/home.molier.net.yaml
+++ b/home.molier.net.yaml
@@ -14,6 +14,10 @@ ca:
   - type: A
     value: 172.31.0.3
 
+core:
+  - type: A
+    value: 172.31.0.5
+
 dokku:
   - type: A
     value: 172.31.0.2
