fix: allow recursion on internal

--- a/config/internal/bind/named.conf
+++ b/config/internal/bind/named.conf
@@ -18,17 +18,23 @@ options {
 
 };
 
-logging {
-    channel stdout {
-        stderr;
-        severity info;
-        print-category no;
-        print-severity no;
-        print-time yes;
-    };
-    category security { stdout; };
-    category dnssec   { stdout; };
-    category default  { stdout; };
+zone "." IN {
+	type hint;
+	file "named.ca";
+};
+
+zone "localhost" IN {
+	type master;
+	file "pri/localhost.zone";
+	allow-update { none; };
+	notify no;
+};
+
+zone "127.in-addr.arpa" IN {
+	type master;
+	file "pri/127.zone";
+	allow-update { none; };
+	notify no;
 };
 
 key octodns. {
@@ -38,7 +44,7 @@ key octodns. {
 
 zone "home.molier.net." {
     type master;
-    file "/var/bind/pri/home.molier.net.zone";
+    file "pri/home.molier.net.zone";
     notify explicit;
 
     allow-transfer {
