--- a/config/internal/bind/named.conf
+++ b/config/internal/bind/named.conf
@@ -42,6 +42,22 @@ key octodns. {
   secret "vZew5TtZLTZKTCl00xliGt+1zzsuLWQWFz48bRbPnZU=";
 };
 
+zone "0.31.172.in-addr.arpa" IN {
+	type master;
+	file "pri/0.31.172.in-addr.arpa.zone";
+	
+    notify explicit;
+
+    allow-transfer {
+        key octodns.;
+    };
+
+    allow-update {
+        key octodns.;
+    };
+	
+};
+
 zone "home.molier.net." {
     type master;
     file "pri/home.molier.net.zone";
