feat: externalize secrets

--- a/config/external/bind/named.conf
+++ b/config/external/bind/named.conf
@@ -37,10 +37,7 @@ zone "127.in-addr.arpa" IN {
 	notify no;
 };
 
-key octodns. {
-  algorithm hmac-sha256;
-  secret "vZew5TtZLTZKTCl00xliGt+1zzsuLWQWFz48bRbPnZU=";
-};
+include "/etc/bind/%%AXFR_KEY_NAME%%.key";
 
 zone "home.molier.net." {
     type master;
@@ -48,11 +45,11 @@ zone "home.molier.net." {
     notify explicit;
 
     allow-transfer {
-        key octodns.;
+        key %%AXFR_KEY_NAME%%;
     };
 
     allow-update {
-        key octodns.;
+        key %%AXFR_KEY_NAME%%;
     };
 
 };
