--- a/config/internal/bind/named.conf
+++ b/config/internal/bind/named.conf
@@ -37,23 +37,20 @@ zone "127.in-addr.arpa" IN {
 	notify no;
 };
 
-key octodns. {
-  algorithm hmac-sha256;
-  secret "vZew5TtZLTZKTCl00xliGt+1zzsuLWQWFz48bRbPnZU=";
-};
+include "/etc/bind/%%AXFR_KEY_NAME%%.key";
 
-zone "0.31.172.in-addr.arpa" IN {
+zone "0.31.172.in-addr.arpa." IN {
 	type master;
 	file "pri/0.31.172.in-addr.arpa.zone";
 	
     notify explicit;
 
     allow-transfer {
-        key octodns.;
+        key %%AXFR_KEY_NAME%%;
     };
 
     allow-update {
-        key octodns.;
+        key %%AXFR_KEY_NAME%%;
     };
 	
 };
@@ -64,11 +61,11 @@ zone "home.molier.net." {
     notify explicit;
 
     allow-transfer {
-        key octodns.;
+        key %%AXFR_KEY_NAME%%;
     };
 
     allow-update {
-        key octodns.;
+        key %%AXFR_KEY_NAME%%;
     };
 
 };
