--- a/config/external/zones/home.molier.net.yaml
+++ b/config/external/zones/home.molier.net.yaml
@@ -2,12 +2,17 @@
 '':
   - type: NS
     values: 
-      - ns1.molier.net.
-      - ns2.molier.net.
+      - ns01.molier.net.
+      - ns02.molier.net.
   - type: MX
     values:
       - exchange: gateway.home.molier.net.
         preference: 10
+  - type: A
+    values:
+      - 82.165.116.192
+      - 217.160.60.56
+
 '*':
   - type: CNAME
     value: gateway.home.molier.net.
