--- a/config/external/update.yaml
+++ b/config/external/update.yaml
@@ -5,29 +5,19 @@ providers:
     directory: ./config/external/zones
     default_ttl: 3600
     enforce_order: True
-  ns01:
+  target:
     class: octodns_bind.Rfc2136Provider
-    host: ns01.molier.net
+    host: env/TARGET_HOST
     port: 53
     ipv6: False
     timeout: 15
     key_name: env/AXFR_KEY_NAME
     key_secret: env/AXFR_KEY_SECRET
     key_algorithm: hmac-sha256
-  ns02:
-    class: octodns_bind.Rfc2136Provider
-    host: ns02.molier.net
-    port: 53
-    ipv6: False
-    timeout: 15
-    key_name: env/AXFR_KEY_NAME
-    key_secret: env/AXFR_KEY_SECRET
-    key_algorithm: hmac-sha256
-
+  
 zones:
   home.molier.net.:
     sources:
       - config
     targets:
-      - ns01
-      - ns02
+      - target
