feat: add molier.local and 10.1 reverse zone

--- a/config/internal/bind/named.conf
+++ b/config/internal/bind/named.conf
@@ -69,3 +69,34 @@ zone "home.molier.net." {
     };
 
 };
+
+zone "1.10.in-addr.arpa." IN {
+	type master;
+	file "pri/1.10.in-addr.arpa.zone";
+	
+    notify explicit;
+
+    allow-transfer {
+        key %%AXFR_KEY_NAME%%;
+    };
+
+    allow-update {
+        key %%AXFR_KEY_NAME%%;
+    };
+	
+};
+
+zone "molier.local." {
+    type master;
+    file "pri/molier.local.zone";
+    notify explicit;
+
+    allow-transfer {
+        key %%AXFR_KEY_NAME%%;
+    };
+
+    allow-update {
+        key %%AXFR_KEY_NAME%%;
+    };
+
+};
